--- a/settings.ini
+++ b/settings.ini
@@ -7,11 +7,11 @@ lib_name = surfbreak
 # company_name = nike
 
 user = sjobeek
-# description = A description of your project
-# keywords = some keywords
-# author = Your Name
-# author_email = email@example.com
-# copyright = Your Name or Company Name
+description = Computational modeling of surf breaks from video
+keywords = computer vision surfing machine learning
+author = Erik Sjoberg
+author_email = sjobeek@gmail.com
+copyright = Erik Sjoberg
 branch = master
 version = 0.0.1
 min_python = 3.6
