--- a/settings.ini
+++ b/settings.ini
@@ -25,7 +25,7 @@ license = gpl3
 status = 2
 
 # Optional. Same format as setuptools requirements
-# requirements = 
+requirements = youtube-dl
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 # Optional. Same format as setuptools dependency-links
