--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,9 @@ jobs:
         architecture: 'x64'
     - name: Install the library
       run: |
+        sudo add-apt-repository ppa:nilarimogard/webupd8
+        sudo apt update
+        sudo apt install streamlink
         pip install nbdev jupyter
         pip install -e .
     - name: Read all notebooks
