--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       run: |
         sudo add-apt-repository ppa:nilarimogard/webupd8
         sudo apt update
-        sudo apt install streamlink python3-opencv
+        sudo apt install streamlink python-opencv
         pip install nbdev jupyter
         pip install -e .
     - name: Read all notebooks
