--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,10 @@ jobs:
         architecture: 'x64'
     - name: Install the library
       run: |
-        sudo add-apt-repository ppa:nilarimogard/webupd8
-        sudo apt update
-        sudo apt install streamlink python-opencv
+        add-apt-repository ppa:nilarimogard/webupd8
+        apt-get update
+        apt-get install streamlink
+        pip install opencv-python
         pip install nbdev jupyter
         pip install -e .
     - name: Read all notebooks
