--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 name: CI
-on: [push, pull_request]
+on: [] #[push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,7 +13,7 @@ jobs:
       run: |
         sudo add-apt-repository ppa:nilarimogard/webupd8
         sudo apt-get update
-        sudo apt-get install streamlink
+        sudo apt-get install ffmpeg streamlink 
         sudo pip install opencv-python
         pip install nbdev jupyter
         pip install -e .
