--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 name: CI
-on: [] #[push, pull_request]
+on: [fork] # Disable for now (was [push, pull_request])
 jobs:
   build:
     runs-on: ubuntu-latest
