--- a/settings.ini
+++ b/settings.ini
@@ -25,7 +25,7 @@ license = gpl3
 status = 2
 
 # Optional. Same format as setuptools requirements
-requirements = requests opencv-python matplotlib dask[complete] graphchain
+requirements = requests opencv-python matplotlib dask[complete] graphchain graphviz
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 # Optional. Same format as setuptools dependency-links
