--- a/settings.ini
+++ b/settings.ini
@@ -37,7 +37,7 @@ requirements = requests opencv-python matplotlib dask[complete] graphchain graph
 ###
 
 # Change to, e.g. "nbs", to put your notebooks in nbs dir instead of repo root
-nbs_path = .
+nbs_path = nbs
 doc_path = docs
 
 # Anything shown as '%(...)s' is substituted with that setting automatically
@@ -53,7 +53,6 @@ doc_baseurl = /%(lib_name)s/
 git_url = https://github.com/%(user)s/%(lib_name)s/tree/%(branch)s/
 # For Enterprise Github use:
 #git_url = https://github.%(company_name)s.com/%(repo_name)s/%(lib_name)s/tree/%(branch)s/
-
 
 
 lib_path = %(lib_name)s
